--- a/basbusfont.css
+++ b/basbusfont.css
@@ -1,29 +1,20 @@
 @font-face {
-font-family: "Asomy";
-font-style: normal;
-src: url(arfonts-dg-3asomy-thin.ttf) format("ttf");
-font-display: auto;
-}
-
-@font-face {
-font-family: "Asomy";
-font-style: normal;
-font-weight: 700;
-src: url(arfonts-dg-3asomy-thin.ttf) format("truetype");
-unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-U+FEFF, U+FFFD;
+  font-family: "Asomy";
+  font-style: normal;
+  font-weight: 400;
+  src: url("https://raw.githubusercontent.com/basbusco/sallafont/main/arfonts-dg-3asomy-thin.ttf") format("truetype");
+  font-display: swap;
 }
 
 body {
-font-family: "Asomy", cursive;
-text-align: center;
+  font-family: "Asomy", sans-serif;
+  text-align: center;
 }
 
 h1 {
-font-weight: 700;
+  font-weight: 700;
 }
 
 h2 {
-font-weight: 400;
+  font-weight: 400;
 }
